Fix margin alignment

--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: column nowrap;
   gap: 1em;
-  padding: 1.5em;
+  padding: 1rem;
 }
 
 .settings form {
